<resources>
    <string name="app_name">UP2U</string>
    <string name="title_activity_coba">coba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="news">News</string>
    <string name="lounge">Lounge</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="general">General</string>
    <string name="help">Help</string>
    <string name="lorem_title">Lorem ipsum dolor sit amet</string>
    <string name="lorem_desc">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string-array name="menu">
        <item>Update</item>
        <item>Delete</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki Laki</string>
    <string name="register">Register</string>
    <string name="profile_name">Profile Name</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="kategori">Kategori</string>
    <string name="filter_by">Filter by</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="guest">Guest</string>
    <string name="judul_thread">Judul Thread</string>
    <string name="ketikkan_isi">Ketikkan isi</string>
    <string name="gambar_video">Gambar / Video</string>
    <string name="no_connection_detected">No Connection Detected....</string>
    <string name="tag">tag</string>
    <string name="bionullhim">No description about him</string>
    <string name="bionullher">No description about her</string>
    <string name="bionullme">No description about me...</string>
</resources>
