<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bglogin"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="255dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
                    android:drawableTint="@color/white"
                    android:hint="@string/profile_name"
                    android:inputType="textPersonName"
                    android:maxLength="15" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="255dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawableTint="@color/white"
                    android:hint="@string/email"
                    android:inputType="textPersonName|textEmailAddress"
                    android:maxLength="50" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawableTint="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="12" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <EditText
                    android:id="@+id/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawableTint="@color/white"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="12" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingStart="4dp">

            <TextView
                android:id="@+id/tl"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:drawableTint="@color/white"
                android:text="@string/tanggal_lahir"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="Gender"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <RadioGroup
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/jk_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laki_laki"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/jk_p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:text="@string/perempuan"
                    android:textColor="@color/white" />
            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_reg_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:text="@string/register"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>