<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ForumActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <TextView
                android:id="@+id/title_thread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/lorem_title"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="date"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="20dp"
                    android:text="user" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tag"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:paddingStart="20dp"
                    android:text="@string/tag"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/k_thread"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingEnd="20dp"
                    android:text="@string/kategori" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_thread"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/lorem_desc"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
        <RelativeLayout
            android:id="@+id/komentar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent">
            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingStart="10dp"/>
            <android.support.v7.widget.CardView
                android:id="@+id/komenan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@id/img_profile"
                android:background="@color/white">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Ketikkan Komentar..."
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"/>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:visibility="gone">
            <EditText
                android:id="@+id/komen"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:hint="Ketikkan Komentar"/>
            <ImageView
                android:id="@+id/send"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_send_black_24dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="20dp"/>
        </android.support.design.widget.CoordinatorLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_comment"
            android:layout_below="@id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>